video-item、video-thumbnail、video-list组件

--- a/src/app/home/home-content/home-content.component.html
+++ b/src/app/home/home-content/home-content.component.html
@@ -3,7 +3,7 @@
     <app-tab-bar></app-tab-bar>
   </header>
   <main>
-
+    <router-outlet></router-outlet>
   </main>
   <footer>
     <app-label-bar></app-label-bar>
