--- a/src/app/home/label-bar/label-bar.component.html
+++ b/src/app/home/label-bar/label-bar.component.html
@@ -1,6 +1,21 @@
-<div>
+<div id="label-container">
   <div>
     <i class="icon icon-icon_homepage"></i>
     <span>首页</span>
+  </div>
+
+  <div>
+    <i class="icon icon-icon_runningstate"></i>
+    <span>社区</span>
+  </div>
+
+  <div>
+    <i class="icon icon-icon_upload"></i>
+    <span>上传</span>
+  </div>
+
+  <div>
+    <i class="icon icon-icon_head_default"></i>
+    <span>我的</span>
   </div>
 </div>
