推荐页面甄选视频

--- a/src/app/home/tab-bar/tab-bar.component.html
+++ b/src/app/home/tab-bar/tab-bar.component.html
@@ -1,4 +1,7 @@
 
 <div class="jiyi-tabs-container">
-  <label class="jiyi-tab" *ngFor="let tab of tabs">{{tab}}</label>
+  <button 
+    class="jiyi-tab" *ngFor="let tab of tabs" 
+    [routerLink]="[ '/home/' + tab.tabType ]"
+    routerLinkActive="active">{{tab.name}}</button>
 </div>
