--- a/src/app/shared/every-pick/every-pick.component.html
+++ b/src/app/shared/every-pick/every-pick.component.html
@@ -1,1 +1,11 @@
 
+<div class="everyday-pick-container">
+  <div class="everyday-pick-header">
+    <span>记忆精彩甄选</span>
+    <div>
+      <span>查看全部</span>
+      <i class="icon icon-icon_arrow_right"></i>
+    </div>
+  </div>
+  <app-video-item></app-video-item>
+</div>
