--- a/src/app/shared/video-list/video-list.component.html
+++ b/src/app/shared/video-list/video-list.component.html
@@ -6,8 +6,8 @@
     </div>
     <app-video-item></app-video-item>
   </div>
+  
   <app-video-thumbnail 
-    *ngFor="let videoItem of videoList; let i = index" 
-    *ngIf="index > 0 && 3 > index">
+    *ngFor="let videoItem of videoList; let i = index">
   </app-video-thumbnail>
 </div>
