--- a/src/app/shared/video-thumbnail/video-thumbnail.component.html
+++ b/src/app/shared/video-thumbnail/video-thumbnail.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let videoItem of videoList; let i = index" *ngIf="index > 0 && 3 > index">
+<div *ngFor="let videoItem of videoList; let i = index">
   <img src="../../../assets/icon/page-1.png">
   <div class="video-desc">
     <span>title</span>
