--- a/src/global.scss
+++ b/src/global.scss
@@ -17,21 +17,25 @@ html {
 .main-container {
     display: flex;
     flex-direction: column;
-    height: calc(100% - 32px);
+    height: calc(100% - 16px);
 }
 
 header {
     flex: 0 1 auto;
-    width: 100%;
+    width: calc(100% - 32px);
+    margin: 0 16px;
 }
 
 main {
     flex: 1 0 auto;
-    width: 100%;
-    margin: 8px;
+    width: calc(100% - 32px);
+    margin:  0 16px 8px;
 }
 
 footer {
     flex: 0 1 auto;
     width: 100%;
+    padding: 8px 0;
+    background: rgba(250,250,250,0.90);
+    box-shadow: inset 0 0 0 0 rgba(0,0,0,0.25);
 }
