--- a/src/app/shared/every-pick/every-pick.component.html
+++ b/src/app/shared/every-pick/every-pick.component.html
@@ -7,5 +7,5 @@
       <i class="icon icon-icon_arrow_right"></i>
     </div>
   </div>
-  <app-video-item></app-video-item>
+  <app-video-item [videoInfo]="videoInfo"></app-video-item>
 </div>
