--- a/src/app/shared/video-thumbnail/video-thumbnail.component.html
+++ b/src/app/shared/video-thumbnail/video-thumbnail.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="video-thumbnail-container">
   <img [src]="videoInfo.thumbnailUri">
   <div class="video-desc">
     <span>{{videoInfo.title}}</span>
