--- a/src/app/home/recommend/recommend.component.scss
+++ b/src/app/home/recommend/recommend.component.scss
@@ -1,3 +1,12 @@
 .recommend-container .everyday-pick-container {
     border-bottom: 1px solid rgba(0,0,0,0.10);
 }
+
+.category-list-container {
+    margin-top: 24px;
+    padding-bottom: 4px;
+}
+
+.category-list-container:not(:last-child) {
+    border-bottom: 1px solid rgba(0,0,0,0.10);
+}
