类目页面(TODO: 上拉加载)

--- a/src/app/home/common/tab-bar/tab-bar.component.html
+++ b/src/app/home/common/tab-bar/tab-bar.component.html
@@ -2,6 +2,6 @@
 <div class="jiyi-tabs-container">
   <button 
     class="jiyi-tab" *ngFor="let tab of tabs" 
-    [routerLink]="[ '/home/' + tab.tabType ]"
+    [routerLink]="[ '/home', tab.tabType ]"
     routerLinkActive="active">{{tab.name}}</button>
 </div>
