--- a/src/global.scss
+++ b/src/global.scss
@@ -43,3 +43,8 @@ footer {
     background: rgba(250,250,250,0.90);
     box-shadow: inset 0 0 0 0 rgba(0,0,0,0.25);
 }
+
+// vg-player {
+//     width: 100%;
+//     height: 228px
+// }
