comments list animation init

--- a/src/app/video-play/video-detail/video-detail.component.html
+++ b/src/app/video-play/video-detail/video-detail.component.html
@@ -9,4 +9,6 @@
       </div>
     </div>
   </div>
+
+  <div class="recommends-list" [@commentAnim]="animState" (click)="onClick()"></div>
 </vg-player>
