--- a/src/app/video-play/video-detail/video-detail.component.scss
+++ b/src/app/video-play/video-detail/video-detail.component.scss
@@ -24,3 +24,12 @@
     height: 100px;
 }
 
+.recommends-list {
+    width: 100%;
+    height: 600px;
+    position: absolute;
+    bottom: 0px;
+    background-color: red;
+    transform: translateY(100%);
+}
+
