评论列表完成

--- a/src/app/video-play/video-detail/video-detail.component.html
+++ b/src/app/video-play/video-detail/video-detail.component.html
@@ -1,6 +1,6 @@
 <vg-player>
   <div class="video-play-container">
-    <app-video-play-item [videoInfo]="videoInfo"></app-video-play-item>
+    <app-video-play-item [videoInfo]="videoInfo" (showComments)="showCommentsHandler()"></app-video-play-item>
     
     <div class="recommend">
       <span>相关推荐</span>
@@ -10,5 +10,8 @@
     </div>
   </div>
 
-  <div class="recommends-list" [@commentAnim]="animState" (click)="onClick()"></div>
+  <div class="recommends-list" [@commentAnim]="animState" (click)="onClick()">
+    <div class="count">{{videoInfo.commentsCount}}条评论</div>
+    <app-comment-item *ngFor="let commentInfo of comments" [commentInfo]="commentInfo"></app-comment-item>
+  </div>
 </vg-player>
