--- a/src/app/video-play/video-play-item/video-play-item.component.html
+++ b/src/app/video-play/video-play-item/video-play-item.component.html
@@ -27,7 +27,7 @@
             <i class="icon icon-icon_add_outline"></i>
             <span>收藏</span>
         </div>
-        <div (click)="showCommends()">
+        <div (click)="showCommentsClick()">
             <i class="icon icon-icon_tp_overview"></i>
             <span>评论</span>
         </div>
