--- a/src/app/video-play/video-detail/video-detail.component.scss
+++ b/src/app/video-play/video-detail/video-detail.component.scss
@@ -26,10 +26,19 @@
 
 .recommends-list {
     width: 100%;
-    height: 600px;
+    height: 60%;
     position: absolute;
     bottom: 0px;
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.9);
     transform: translateY(100%);
+    overflow-y: scroll;
+    padding-bottom: 8px;
+}
+
+.recommends-list .count {
+    width: 100%;
+    text-align: center;
+    color: rgba(255,255,255,0.60);
+    padding: 12px;
 }
 
