--- a/src/app/shared/video-item/video-item.component.html
+++ b/src/app/shared/video-item/video-item.component.html
@@ -6,7 +6,7 @@
     <img [src]="videoInfo.avatorUri" (click)="showUserInfo($event)">
     <div class="video-desc">
       <span>{{videoInfo.title}}</span>
-      <span>{{videoInfo.description}}</span>
+      <span>{{videoInfo.subTitle}}</span>
     </div>
   </div>
 </div>
