--- a/src/app/shared/video-thumbnail/video-thumbnail.component.html
+++ b/src/app/shared/video-thumbnail/video-thumbnail.component.html
@@ -2,6 +2,6 @@
   <img [src]="videoInfo.thumbnailUri">
   <div class="video-desc">
     <span class="title" [ngStyle]="{'color': titleColor}">{{videoInfo.title}}</span>
-    <span class="description" [ngStyle]="{'color': descColor}">{{videoInfo.description}}</span>
+    <span class="description" [ngStyle]="{'color': descColor}">{{videoInfo.subTitle}}</span>
   </div>
 </div>
