评论点赞收藏接口绑定

--- a/src/app/video-play/comment-item/comment-item.component.html
+++ b/src/app/video-play/comment-item/comment-item.component.html
@@ -6,7 +6,7 @@
       <span class="content">{{commentInfo.content}}</span>
       <div>
         <span class="date">{{commentInfo.date}}</span>
-        <span>· 回复</span>
+        <span (click)="replyClick()">· 回复</span>
       </div>
     </div>
     <div *ngIf="commentInfo.type == 'reply'" style="width: 100%">
@@ -21,7 +21,7 @@
         </div>
         <div>
           <span class="date">{{commentInfo.date}}</span>
-          <span>· 回复</span>
+          <span (click)="replyClick()">· 回复</span>
         </div>
     </div>
   </div>
