--- a/src/app/shared/every-pick/every-pick.component.html
+++ b/src/app/shared/every-pick/every-pick.component.html
@@ -1,7 +1,7 @@
 
 <div class="everyday-pick-container">
   <div class="everyday-pick-header">
-    <span>记忆精彩甄选</span>
+    <span>济忆精彩甄选</span>
     <div>
       <span>查看全部</span>
       <i class="icon icon-icon_arrow_right"></i>
