--- a/src/app/video-play/video-detail/video-detail.component.scss
+++ b/src/app/video-play/video-detail/video-detail.component.scss
@@ -32,7 +32,7 @@
     background-color: rgba(0, 0, 0, 0.9);
     transform: translateY(100%);
     overflow-y: scroll;
-    padding-bottom: 8px;
+    padding-bottom: 44px;
 }
 
 .recommends-list .count {
@@ -40,5 +40,26 @@
     text-align: center;
     color: rgba(255,255,255,0.60);
     padding: 12px;
+    font-size: 12px;
+}
+
+.input {
+    width: 100%;
+    height: 44px;
+    background-color: #101010;
+    padding: 6px 16px;
+    position: fixed;
+    bottom: 0;
+}
+.input input {
+    background-color: #000000;
+    color: #ffffff;
+    border-radius: 16px;
+    width: 100%;
+    height: 32px;
+    border: none;
+    padding: 8px 16px;
+    font-size: 12px;
+    outline: none;
 }
 
