关注和关注tab页

--- a/src/app/home/common/label-bar/label-bar.component.html
+++ b/src/app/home/common/label-bar/label-bar.component.html
@@ -1,6 +1,8 @@
 <div id="label-container">
   <div>
-    <i class="icon icon-icon_homepage"></i>
+    <i class="icon icon-icon_homepage"
+    [routerLink]="[ '/home' ]"
+    routerLinkActive="active"></i>
     <span>首页</span>
   </div>
 
