--- a/src/app/video-play/video-detail/video-detail.component.scss
+++ b/src/app/video-play/video-detail/video-detail.component.scss
@@ -63,3 +63,10 @@
     outline: none;
 }
 
+.user-info {
+    // margin: 8px 16px;
+    padding: 8px 0px;
+    margin: 0 16px;
+    border-bottom: 1px solid rgba(255,255,255,0.40);
+}
+
