--- a/src/app/home/common/label-bar/label-bar.component.html
+++ b/src/app/home/common/label-bar/label-bar.component.html
@@ -7,7 +7,9 @@
   </div>
 
   <div>
-    <i class="icon icon-icon_runningstate"></i>
+    <i class="icon icon-icon_runningstate"
+    [routerLink]="[ '/community' ]"
+    routerLinkActive="active"></i>
     <span>社区</span>
   </div>
 
