--- a/src/app/shared/label-bar/label-bar.component.html
+++ b/src/app/shared/label-bar/label-bar.component.html
@@ -14,12 +14,15 @@
   </div>
 
   <div>
-    <i class="icon icon-icon_upload"></i>
+    <i class="icon icon-icon_upload"
+    ></i>
     <span>上传</span>
   </div>
 
   <div>
-    <i class="icon icon-icon_head_default"></i>
+    <i class="icon icon-icon_head_default"
+    [routerLink]="[ '/personal' ]"
+    routerLinkActive="active"></i>
     <span>我的</span>
   </div>
 </div>
