--- a/src/app/video-play/video-detail/video-detail.component.scss
+++ b/src/app/video-play/video-detail/video-detail.component.scss
@@ -3,9 +3,10 @@
     overflow-y: scroll;
 }
 
-// .video-play-container::-webkit-scrollbar {
-//     visibility: hidden;
-// }
+.video-play-container::-webkit-scrollbar {
+    visibility: hidden;
+    width: 0;
+}
 
 .recommend {
     margin: 16px;
