--- a/src/global.scss
+++ b/src/global.scss
@@ -35,6 +35,10 @@ main {
     height: 100px;
     overflow-y: scroll;
 }
+::-webkit-scrollbar {
+    visibility: hidden;
+    width: 0;
+}
 
 footer {
     flex: 0 1 auto;
@@ -48,3 +52,10 @@ footer {
 //     width: 100%;
 //     height: 228px
 // }
+
+app-personal,
+app-video-detail,
+app-community,
+app-home-content {
+    height: 100%;
+}
