关注、社区接口

--- a/src/app/community/community/community.component.html
+++ b/src/app/community/community/community.component.html
@@ -4,7 +4,7 @@
   </header>
   <main>
     <div class="type-list-container">
-      <div *ngFor="let type of typeList">
+      <div *ngFor="let type of typeList" (click)="chooseLabel(type.type)">
         <img [src]="type.background">
         <span>{{type.text}}</span>
       </div>
