--- a/src/app/personal/personal/personal.component.html
+++ b/src/app/personal/personal/personal.component.html
@@ -15,7 +15,7 @@
           <i class="icon icon-icon_star"></i>
           <span>收藏</span>
         </div>
-        <div>
+        <div (click)="goConcerns()">
           <i class="icon icon-icon_clientlist"></i>
           <span>关注</span>
         </div>
