--- a/src/app/video-play/video-detail/video-detail.component.scss
+++ b/src/app/video-play/video-detail/video-detail.component.scss
@@ -1,6 +1,7 @@
 .video-play-container {
     background-color: #030303;
     overflow-y: scroll;
+    width: 100%;
 }
 
 .video-play-container::-webkit-scrollbar {
