--- a/src/app/video-play/video-play-item/video-play-item.component.scss
+++ b/src/app/video-play/video-play-item/video-play-item.component.scss
@@ -1,5 +1,6 @@
 .video-play-item-container {
     position: relative;
+    width: 100%;
 }
 .video-play-item-container .title {
     color: #ffffff;
