--- a/src/global.scss
+++ b/src/global.scss
@@ -48,11 +48,13 @@ footer {
     box-shadow: inset 0 0 0 0 rgba(0,0,0,0.25);
 }
 
-// vg-player {
-//     width: 100%;
-//     height: 228px
-// }
+vg-player {
+    width: 100%;
+    height: 228px
+}
 
+app-login,
+app-register,
 app-personal-detail,
 app-concern-list,
 app-personal,
