--- a/src/app/concern-list/concern-list/concern-list.component.html
+++ b/src/app/concern-list/concern-list/concern-list.component.html
@@ -1,5 +1,8 @@
 <div class="main-container">
   <header>
+    <div class="back">
+      <i class="icon icon-icon_arrow_left" (click)="goBack()"></i>
+    </div>
     <div>我的关注</div>
   </header>
   <main>
