--- a/src/app/shared/userinfo-item/userinfo-item.component.html
+++ b/src/app/shared/userinfo-item/userinfo-item.component.html
@@ -4,5 +4,5 @@
     <div>{{userInfo.username}}</div>
     <div>{{userInfo.description}}</div>
   </div>
-  <button class="concern" [ngClass]="{'cancel-concern': concerned}" (click)="concernClick()">{{concerned ? '取消关注' : '关注'}}</button>
+  <button class="concern" [ngClass]="{'cancel-concern': concerned}" (click)="concernClick($event)">{{concerned ? '取消关注' : '关注'}}</button>
 </div>
