--- a/src/app/personal-detail/personal-detail/personal-detail.component.scss
+++ b/src/app/personal-detail/personal-detail/personal-detail.component.scss
@@ -28,6 +28,20 @@
     border-bottom: 2px solid #FFA600;
 }
 
+.personal-basic {
+    position: relative;
+}
+.personal-basic input {
+    position: absolute;
+    bottom: 0;
+    outline: none;
+    border: 1px solid rgba(0,0,0,0.20);
+    border-radius: 2px;
+    width: 100%;
+    font-size: 12px;
+    color: #666666;
+    z-index: 2;
+}
 .personal-basic p {
     margin: 0;
 }
@@ -39,7 +53,7 @@
     margin-bottom: 8px;
     margin-top: 24px;
 }
-.personal-basic p:last-child {
+.personal-basic .desc {
     font-size: 12px;
     color: #666666;
 }
