--- a/src/app/shared/video-item-with-desc/video-item-with-desc.component.scss
+++ b/src/app/shared/video-item-with-desc/video-item-with-desc.component.scss
@@ -55,5 +55,6 @@
     background-color: #D8D8D8;
     border-radius: 4px;
     color: #0065FF;
-    padding: 4px;
+    padding: 2px 4px;
+    font-size: 12px;
 }
