--- a/src/app/shared/label-bar/label-bar.component.html
+++ b/src/app/shared/label-bar/label-bar.component.html
@@ -14,9 +14,9 @@
   </div>
 
   <div>
-    <i class="icon icon-icon_upload"
+    <i class="icon icon-icon_paste"
     ></i>
-    <span>上传</span>
+    <span>通知</span>
   </div>
 
   <div>
