更换头像action sheet & 默认头像和背景

--- a/src/app/personal-detail/personal-detail/personal-detail.component.html
+++ b/src/app/personal-detail/personal-detail/personal-detail.component.html
@@ -1,7 +1,7 @@
-<div style="position:absolute; height: 100%; overflow-y: scroll;">
+<div style="position:absolute; height: 100%; overflow-y: scroll; width: 100%;">
   <div *ngIf="personal" class="personal-container">
     <div class="avator">
-      <img class="avator-bg" [src]="personal.avator">
+      <img class="avator-bg" [src]="personal.avator == '../../../assets/icon/default-head.svg' ? '../../../assets/icon/default-bg.png' : personal.avator">
       <img class="my-avator" [src]="personal.avator" (click)="selectAcator()">
     </div>
     <div class="personal-basic">
