--- a/src/app/personal/personal/personal.component.html
+++ b/src/app/personal/personal/personal.component.html
@@ -1,9 +1,11 @@
 <div class="personal-container">
   <main *ngIf="personal">
     <div class="personal-basic">
-      <img class="avator-bg" [src]="personal.avator">
+      <img 
+        class="avator-bg" 
+        [src]="personal.avator == '../../../assets/icon/default-head.svg' ? '../../../assets/icon/default-bg.png' : personal.avator">
       <div class="basic">
-        <img [src]="personal.avator">
+        <img [src]="personal.avator" (click)="goUserInfo()">
         <span>{{personal.username}}</span>
       </div>
       <div class="operates">
