--- a/src/app/shared/userinfo-item/userinfo-item.component.html
+++ b/src/app/shared/userinfo-item/userinfo-item.component.html
@@ -1,5 +1,5 @@
 <div class="userinfo-container">
-  <img [src]="userInfo.avator">
+  <img [src]="avatorUrl">
   <div class="user-description">
     <div>{{userInfo.username}}</div>
     <div>{{userInfo.description}}</div>
