--- a/src/app/shared/video-item-with-desc/video-item-with-desc.component.html
+++ b/src/app/shared/video-item-with-desc/video-item-with-desc.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="video-list-header">
-    <img [src]="videoInfo.avatorUri" (click)="showUserInfo($event)">
+    <img [src]="nodeUrl + '/users/avator/' + videoInfo.authorId" (click)="showUserInfo($event)">
     <div class="video-desc">
       <span>{{videoInfo.title}}</span>
       <span>{{videoInfo.subTitle}}</span>
