--- a/src/app/shared/label-bar/label-bar.component.html
+++ b/src/app/shared/label-bar/label-bar.component.html
@@ -15,7 +15,8 @@
 
   <div>
     <i class="icon icon-icon_paste"
-    ></i>
+    [routerLink]="[ '/notification' ]"
+    routerLinkActive="active"></i>
     <span>通知</span>
   </div>
 
