--- a/src/global.scss
+++ b/src/global.scss
@@ -67,7 +67,8 @@ app-concern-list,
 app-personal,
 app-video-detail,
 app-community,
-app-home-content {
+app-home-content,
+app-notification {
     height: 100%;
 }
 
