--- a/src/app/shared/label-bar/label-bar.component.html
+++ b/src/app/shared/label-bar/label-bar.component.html
@@ -13,6 +13,10 @@
     <span>社区</span>
   </div>
 
+  <div class="add-video">
+    <i class="icon icon-icon_add_circle" (click)="uploadVideo()"></i>
+  </div>
+
   <div>
     <i class="icon icon-icon_paste"
     [routerLink]="[ '/notification' ]"
