--- a/src/app/community/community/community.component.scss
+++ b/src/app/community/community/community.component.scss
@@ -7,7 +7,7 @@ header > div {
 .type-list-container {
     display: flex;
     flex-direction: row;
-    // padding-bottom: 8px;
+    padding-bottom: 8px;
     border-bottom: 1px solid rgba(0,0,0,0.10);
     position: relative;
     overflow-x: scroll;
